@@ -12,7 +12,7 @@ Last-Update: 2017-06-29
 This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
 --- a/src/core/web_engine_library_info.cpp
 +++ b/src/core/web_engine_library_info.cpp
-@@ -254,24 +254,7 @@
+@@ -260,24 +260,7 @@ QString icuDataPath()
  #if defined(OS_MACOSX) && defined(QT_MAC_FRAMEWORK_BUILD)
      return getResourcesPath(frameworkBundle());
  #else
